# TEC_Gallery

./: CMakeLists.txt  character_size.h  main.cpp  mongodb_handler.h  mongodb_handler2.h
Doxygen/html/: _huff_encoder_8cpp.html  _huff_encoder_8h.html  _huff_encoder_8h_source.html  annotated.html  class_huff_encoder-members.html  class_huff_encoder.html  class_main_window-members.html  class_main_window.html  class_metadata_1_1_mongo_db_meta_handler-members.html  class_metadata_1_1_mongo_db_meta_handler.html  class_second_win-members.html  class_second_win.html  class_sign_up-members.html  class_sign_up.html  class_users_1_1_mongo_db_user_handler-members.html  class_users_1_1_mongo_db_user_handler.html  classes.html  classimg2string_traductor-members.html  classimg2string_traductor.html  classmetadata-members.html  classmetadata.html  classstring2img_traductor-members.html  classstring2img_traductor.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  img2string_traductor_8cpp.html  img2string_traductor_8h.html  img2string_traductor_8h_source.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  (+14 more)
HuffmanTest/: CMakeLists.txt  HuffEncoder.cpp  HuffEncoder.h  Huffman.cpp  Huffman.h  img2stringTraductor.cpp  main.cpp
HuffmanTestDaniel/: CMakeLists.txt  HuffDecoder.cpp  HuffDecoder.h  HuffEncoder.h  img2stringTraductor.cpp  main.cpp  string2imgTraductor.cpp  string2imgTraductor.h
HuffmanTestDaniel (copy)/: HuffEncoder.h  main.cpp
TEC_Gallery/: CMakeLists.txt  CMakeLists.txt.user.5500dcb  HuffEncoder.cpp  HuffEncoder.h  img2stringTraductor.cpp  img2stringTraductor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  metadata.ui  mongodb_handler.h  mongodb_handler2.h  principal.cpp  secondwin.cpp  secondwin.h  secondwin.ui  signup.cpp  signup.h  signup.ui  string2imgTraductor.cpp  string2imgTraductor.h
TEC_Gallery/Galerias/Haruto/Gatos/RAID/Disk1/: bols.txt
TEC_Gallery/Galerias/Haruto/Gatos/RAID/Disk2/: globitos.txt
TEC_Gallery/Galerias/Haruto/colera/RAID/Disk3/: Paridadshit.txt
TEC_Gallery/Galerias/Haruto/ma/RAID/Disk2/: hola.txt
TEC_Gallery/Galerias/Haruto/ma/RAID/Disk3/: hola.txt
TEC_Gallery/Galerias/Jose/Mis/RAID/Disk0/: Paridadglobitos.txt
build-TEC_Gallery-Desktop-Debug/: CMakeCache.txt.prev  Makefile  TEC_Gallery.cbp  cmake_install.cmake
build-TEC_Gallery-Desktop_Qt_6_2_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
(+115 files in other folders)
